# NeedRadar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  coverage-summary.json  docker-compose.yml  pyproject.toml  runtime_bootstrap.py
.github/workflows/: ci.yml
alembic/: __init__.py  env.py
alembic/versions/: 20240521_0001_initial_schema.py  20240530_0002_export_and_sync_logs.py  20260321_0003_source_types.py  20260417_0004_candidate_review_metadata.py  20260417_0005_raw_entry_metadata.py
app/: __init__.py  main.py
app/api/: deps.py  routes.py
app/core/: config.py  logging.py  metrics.py  simple_prometheus.py  telemetry.py
app/db/: base.py  entities.py  session.py  storage.py
app/models/: __init__.py  candidate_need.py  downstream.py  export_job.py  filter_rule.py  rss.py
app/schemas/: __init__.py  candidate_needs.py  customer_radar.py  dashboard.py  document_ops.py  email_followups.py  filter_metrics.py  filter_rules.py  marketplace_leads.py  raw_entries.py  rss.py
app/services/: __init__.py  alerts.py  candidate_clusters.py  candidate_needs.py  customer_radar.py  dashboard.py  document_ops.py  downstream.py  downstream_metrics.py  email_followups.py  export_jobs.py  fetch_logs.py  filter_engine.py  filter_metrics.py  filter_rules.py  github_fetcher.py  hacker_news_fetcher.py  llm_client.py  marketplace_fetcher.py  marketplace_leads.py  mq.py  pipeline.py  raw_entries.py  reddit_fetcher.py  rss_fetcher.py  (+4 more)
cli/: main.py
docs/: marketplace-ops-cadence.md  开发任务文档.md  开发文档.md  需求文档.md
fastapi/: __init__.py  application.py  dependencies.py  exceptions.py  responses.py  routing.py  status.py  testclient.py
jobs/: __init__.py  celery_app.py  scheduler.py  simple_celery.py  task_queue.py  tasks.py
monitoring/: grafana_downstream.json  prometheus.yml
pydantic/: __init__.py
pydantic_settings/: __init__.py
scripts/: local_stack.sh
sqlalchemy/: __init__.py
structlog/: __init__.py
tests/: conftest.py  test_alerts.py  test_candidate_needs.py  test_customer_radar.py  test_dashboard.py  test_document_ops.py  test_downstream.py  test_downstream_metrics.py  test_email_followups.py  test_export_jobs.py  test_fetch_logs.py  test_filter_engine.py  test_filter_metrics.py  test_filter_rules.py  test_health.py  test_llm_client.py  test_marketplace_leads.py  test_metrics.py  test_mq.py  test_pipeline.py  test_raw_entries.py  test_rss_fetcher.py  test_rss_sources.py  test_runtime_bootstrap.py  test_security.py  test_simple_prometheus.py  test_source_catalog.py  test_task_queue.py  test_tasks.py
tools/: __init__.py  coverage_runner.py
typer/: __init__.py
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
(+57 files in other folders)
