[project]
name = "needradar"
version = "0.1.0"
description = "NeedRadar RSS 需求挖掘系统"
authors = [{name = "NeedRadar Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic-settings",
    "typer[all]",
    "structlog",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
pythonpath = ["."]

