[project]
name = "needradar"
version = "0.1.0"
description = "NeedRadar RSS 需求挖掘系统"
authors = [{name = "NeedRadar Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "aiosqlite",
    "asyncpg",
    "psycopg[binary]",
    "pydantic-settings",
    "typer[all]",
    "structlog",
    "python-dotenv",
    "httpx",
    "apscheduler",
    "celery[redis]",
    "prometheus-client",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cli*", "jobs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "fastapi",
    "pydantic",
    "pydantic_settings",
    "sqlalchemy",
    "structlog",
    "typer",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
exclude = "(fastapi|pydantic|pydantic_settings|sqlalchemy|structlog|typer)/"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "pydantic",
    "pydantic.*",
    "pydantic_settings",
    "pydantic_settings.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "structlog",
    "structlog.*",
    "typer",
    "typer.*",
    "apscheduler",
    "apscheduler.*",
    "app.api.*",
    "app.schemas",
    "app.schemas.*",
    "app.core.config",
    "app.core.logging",
    "jobs.scheduler",
    "jobs.scheduler.*",
    "cli",
    "cli.*",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
pythonpath = ["."]
markers = [
    "asyncio: async tests",
]

